components/ShowMoreText/ShowMoreText.module.css
.textContainer {
    position: relative;
    overflow: hidden;
}
  
.textContainer::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 30px;
    background: linear-gradient(to bottom, transparent, #252525);
}

.textContainer.expanded {
        max-height: none;
}

.textContainer.expanded::after {
display: none;
}

.showMoreContainer {
    width: 100%;
    position: absolute;
    bottom: -4px;
    cursor: pointer;
    z-index: 2;
}

.showMoreText {
    display: flex;
    justify-content: center;
    color: lightgrey;
}

